hphp/test/zend/good/ext/standard/tests/strings/str_split_variation1.php
<?hh
/* Prototype  : array str_split(string $str [, int $split_length])
 * Description: Convert a string to an array. If split_length is
                specified, break the string down into chunks each
                split_length characters long.
 * Source code: ext/standard/string.c
 * Alias to functions: none
*/
//defining class for object variable
class MyClass
{
  public function __toString()
:mixed  {
    return "object";
  }
}

<<__EntryPoint>> function main(): void {
echo "*** Testing str_split() : unexpected values for 'str' ***\n";

// Initialise function arguments
$split_length = 3;


//resource variable
$fp = fopen(__FILE__, 'r');

//different values for 'str' argument
$values = vec[
  // empty data
  "",
  '',
];

// loop through each element of $values for 'str' argument
for($count = 0; $count < count($values); $count++) {
  echo "-- Iteration ".($count+1)." --\n";
  try { var_dump( str_split($values[$count], $split_length) ); } catch (Exception $e) { echo "\n".'Warning: '.$e->getMessage().' in '.__FILE__.' on line '.__LINE__."\n"; }
}

//closing resource
fclose($fp);

echo "Done";
}
